@@ -19,6 +19,7 @@ NEW: [features/improvements]
 +Add shortcut for Find Previous
 +New version of Launch plugin (Run last executed program)
 +Read Only indicators on tabs
++Add support for Progress 4GL
 
 BUG FIXES:
 +Middle click closes the tab that was clicked on and not the active tab
